# neoscript

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  default.profraw
.github/workflows/: test_and_coverage.yml
include/: neo_command.hpp  neo_command_instance.cpp  neo_command_instance.hpp  neo_command_template.hpp  neo_common.hpp  neo_context.hpp  neo_interpreter.hpp  neo_location.hpp  neo_parameter.hpp  neo_registry.hpp  neo_script.hpp  neo_state_machine.hpp
include/detail/: neo_interpreter.hpp
include/impl/: neo_impl.hpp  neo_lexer.l  neo_parser.yy
src/: neo_command_instance.cpp  neo_command_template.cpp  neo_context.cpp  neo_interpreter.cpp  neo_lexer.l  neo_parser.yy  neo_state_machine.cpp
src/detail/: neo_command_template.cpp  neo_state_machine.cpp
unit_tests/: CMakeLists.txt
unit_tests/validity/: main.cpp  syntax.cpp
unit_tests/validity/dataset/: block.neoscript  blockregion.neoscript  build.neoscript  command.neoscript  comment.neoscript  echo.neoscript  imported.neoscript  string.neoscript  syntax.neoscript  template.neoscript  template_many_params.neoscript  template_no_params.neoscript  textreg_empty.neoscript  textregion.neoscript
unit_tests/validity/expected/: block.neoscript  blockregion.neoscript  build.neoscript  command.neoscript  echo.neoscript  imported.neoscript  string.neoscript  syntax.neoscript  template.neoscript  textreg_empty.neoscript  textregion.neoscript
utility/: CMakeLists.txt
utility/src/: validate.cpp
utils/: neoscript.tmLanguage.json
